style nav bar middle list

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,90 @@
 // @import 'yoga-sass/assets/yoga';
 // @import 'normalize-css/normalize';
 
-// $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
+// IMPORTS
+
+$fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 @import 'font-awesome';
 @import 'box-sizing';
+@import 'resets';
+
+// VARIABLES
+
+$c-primary: #433f4a;
+$c-hover: #201c2b;
+$c-purple-border: #392e5c;
+$c-background-dark-purple: #17141f;
+$c-white: #fff;
+
+.app-main {
+  position: relative;
+}
+
+.nav {
+  position: absolute;
+  width: 240px;
+  height: 100vh;
+  background: $c-background-dark-purple;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 240px;
+    height: 100vh;
+    padding: 1.2rem;
+  }
+
+  &__logo {
+    width: 94px;
+    height: 32px;
+    margin-bottom: 1rem;
+  }
+
+  &__search {
+    width: 100%;
+    margin-bottom: 1rem;
+    padding-left: 0.5rem;
+    border: thin $c-purple-border solid;
+    background: $c-hover;
+    vertical-align: middle;
+
+    &-bar {
+      padding: 0.5rem 0;
+      border: 0;
+      background: $c-hover;
+      font-size: 0.8rem;
+    }
+
+    &-icon {
+      margin-right: 0.5rem;
+      color: $c-primary;
+      font-size: 0.9rem;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    width: 240px;
+    color: $c-white;
+
+    &-item {
+      padding: 1rem 1.2rem;
+
+      &::before {
+        box-shadow: 3px 0 0 #6441a4 inset;
+      }
+
+      &:hover {
+        background: $c-hover;
+        box-shadow: 3px 0 0 #6441a4 inset;
+      }
+    }
+
+    &-icon {
+      display: inline-block;
+      width: 1.5rem;
+    }
+  }
+}
