add sidebar subheading lists

--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -1,9 +1,12 @@
 $c-primary: #433f4a;
+$c-hover: #201c2b;
+$c-purple-border: #392e5c;
 $c-background-dark-purple: #17141f;
+$c-white: #fff;
 
 body {
   margin: 0;
-  color: $c-primary;
+  color: $c-white;
   font-family: 'Roboto', sans-serif;
 }
 
