--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -7,7 +7,13 @@ $c-white: #fff;
 body {
   margin: 0;
   color: $c-white;
-  font-family: 'Roboto', sans-serif;
+  font-family: Helvetica, sans-serif;
+}
+
+h3 {
+  font-size: 0.8rem;
+  font-weight: lighter;
+  text-transform: uppercase;
 }
 
 ul {
