--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -6,15 +6,13 @@
 }
 
 .nav {
-  width: 240px;
+  flex-shrink: 0;
   height: 100vh;
   background: $c-background-dark-purple;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   &__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 240px;
     height: 100vh;
     padding: 1.2rem;
@@ -62,6 +60,7 @@
     color: $c-white;
 
     &-item {
+      flex-shrink: 0;
       padding-left: 1.2rem;
       line-height: 2rem;
 
@@ -86,6 +85,7 @@
     width: 100%;
 
     &-title {
+      flex-shrink: 0;
       padding-bottom: 0.5rem;
       border-bottom: thin $c-primary solid;
     }
