--- a/app/styles/_resets.scss
+++ b/app/styles/_resets.scss
@@ -11,7 +11,8 @@ body {
 }
 
 h3 {
-  font-size: 0.8rem;
+  margin: 0;
+  font-size: 0.9rem;
   font-weight: lighter;
   text-transform: uppercase;
 }
