--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -12,10 +12,13 @@
   overflow-y: scroll;
   overflow-x: hidden;
 
+  &__container {
+    padding: 2rem;
+  }
+
   &__content {
     width: 240px;
     height: 100vh;
-    padding: 1.2rem;
 
     &-subheading {
       display: flex;
@@ -25,9 +28,9 @@
   }
 
   &__logo {
-    width: 94px;
-    height: 32px;
-    margin-bottom: 1rem;
+    display: block;
+    height: 35px;
+    margin: 0 auto 1rem;
   }
 
   &__search {
@@ -83,6 +86,7 @@
   &__subheading {
     align-items: flex-start;
     width: 100%;
+    margin-top: 2rem;
 
     &-title {
       flex-shrink: 0;
@@ -93,10 +97,35 @@
     &-item {
       display: flex;
       flex-direction: row;
+      margin-top: 1rem;
     }
   }
 }
 
 .subheading-icon {
   height: 100%;
+}
+
+.subheading-text {
+  margin-left: 0.5rem;
+  font-size: 0.9rem;
+}
+
+.nav-link__row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 80%;
+  margin-top: 1rem;
+}
+
+.nav-link__column {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
+}
+
+.nav-link__item {
+  margin: 0.2rem 0;
+  color: $c-dark-link;
 }
