--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -13,6 +13,7 @@
   overflow-x: hidden;
 
   &__container {
+    width: 240px;
     padding: 2rem;
   }
 
@@ -116,7 +117,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 80%;
-  margin-top: 1rem;
+  margin: 1rem 0 3rem;
 }
 
 .nav-link__column {
